--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,8 @@
   {%- include head.html -%}
 
   <body>
-
-    {%- include header.html -%}
-
-    <div class="py-5">
-      <div class="container page-content">
-          {{ content }}
-      </div>
-    </div>
-
-    {%- include footer.html -%}
-
+    {%- include navigation.html -%}
+    {{ content }}
   </body>
 
 </html>
