Home page finished first screen

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
   <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
+  <script src="{{"/assets/javascript/main.js" | relative_url }}"></script>
+  <script src="{{"/assets/javascript/jarallax-0.2.4b.min.js" | relative_url }}"></script>
 </head>
