--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -32,12 +32,13 @@ body {
   height: 32rem;
   background-color: #777;
 }
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
+.carousel-item > img, .carousel-item > video {
+  min-height: 100%;
   min-width: 100%;
-  height: 32rem;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
+  filter: blur(5px);
 }
 
 
@@ -114,4 +115,9 @@ linear-gradient(
     filter: invert(35%);
     height: 1em;
     vertical-align: -.125em;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  width: 50px;
+  height: 50px;
 }
