--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -32,7 +32,7 @@ body {
   height: 32rem;
   background-color: #777;
 }
-.carousel-item > img, .carousel-item > video {
+.carousel-item-background{
   min-height: 100%;
   min-width: 100%;
   position: relative;
@@ -117,7 +117,7 @@ linear-gradient(
     vertical-align: -.125em;
 }
 
-.carousel-control-prev-icon, .carousel-control-next-icon {
+.carousel-control-big-icon {
   width: 50px;
   height: 50px;
 }
