Projects component on homepage

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,13 @@
 
 // Some customization of the container class to have a better display in the guide.
 // Don't hesitate to remove it to have a standard Bootstrap behavior
+$container-max-fat-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
+  xxl: 1320px
+);
 $container-max-widths: (
   sm: 540px,
   md: 640px,
