--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,3 +8,5 @@
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
 @import "bootstrap_customization";
 @import "carousel";
+@import "fat_containers";
+@import "images";
