--- a/_includes/project_library_component.html
+++ b/_includes/project_library_component.html
@@ -1,4 +1,4 @@
-<div class="fat-container px-4">
+<div class="fat-container px-4 mb-3">
   <h1 class="display-1 mb-4 text-center">Projects library</h1>
   <ul class="nav nav-pills mb-3" id="myTab" role="tablist">
     <li class="nav-item">
