--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -49,14 +49,14 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
 
-$primary:       #78C2AD !default;
-$secondary:     #F3969A !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$primary:       #78C2AD;
+$secondary:     #F3969A;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$gray-dark:          $gray-800;
 
 $yiq-contrasted-threshold: 250 !default;
 
@@ -79,7 +79,7 @@ $headings-color:              $gray-700 !default;
 
 $table-border-color:          rgba(0,0,0,0.05) !default;
 
-// Dropdowns
+/*// Dropdowns
 
 $dropdown-link-hover-color:         $white !default;
 $dropdown-link-hover-bg:            $secondary !default;
@@ -115,4 +115,4 @@ $pagination-disabled-border-color:  $pagination-disabled-bg !default;
 
 $breadcrumb-bg:                     $primary !default;
 $breadcrumb-divider-color:          $white !default;
-$breadcrumb-active-color:           $breadcrumb-divider-color !default;
+$breadcrumb-active-color:           $breadcrumb-divider-color !default;*/
