Project list mobile bugfix

--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <div class="face-front bg-light">
+            <div class="face-front bg-light d-none d-sm-block">
                 <div class="card-img card-back">
                     <div class="position-absolute rounded overflow-hidden w-100 h-100">
                         <img class="card-img card-img-back" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}" />
