WIP Project Page. Added a lot of project images

--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -16,15 +16,7 @@
                 <h4 class="card-title text-dark translateZ-10">{{ project.title }}</h4>
                 <p class="card-text text-dark translateZ-5">{{ project.short-description }}</p>
                     <div class="p-0 mt-auto" >
-                    {% for line in project.badges %}
-                    {% for badge in line %}
-                    {% assign badge_data = site.data.badges[badge] %}
-                    <span class="badge {{ badge_data.style }}">{{ badge_data.title }}</span>
-                    {% endfor %}
-                    {% unless forloop.last %}
-                    <br />
-                    {% endunless %}
-                    {% endfor %}
+                        {% include badges.html badges=project.badges %}
                     </div>
                 </div>
             </div>
