--- a/_includes/nav_compact.html
+++ b/_includes/nav_compact.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-2 col-3">
         <a href="/" class="btn btn-outline-light">
-        <img class="rounded-circle w-100" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
+          <img class="rounded-circle w-100" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
         </a>
       </div>
       <div class="col-md-8 col-6 d-flex row">
@@ -24,7 +24,9 @@
   <div class="col-12 col-md-10 col-lg-8 d-block d-md-none">
     <div class="row">
       <div class="col-3">
-        <img class="rounded-circle w-100" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
+        <a href="/" class="btn btn-outline-light">
+          <img class="rounded-circle w-100" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
+        </a>
       </div>
       <div class="col-9 d-flex row">
         <ul class="list-unstyled align-self-end flex-column col-12 row">
@@ -34,7 +36,7 @@
         </ul>
       </div> 
       <div class="col-12 d-flex row">
-        <h1 class="col-12 fw-bold">Amaury Butaux</h1>
+        <a href="/" class="btn btn-outline-light"><h1 class="col-12 fw-bold">Amaury Butaux</h1></a>
         <h3 class="col-12 fw-bold">Junior Game Designer</h3>
         <h6 class="col-12 fw-bold">Looking for a 6 months internship</h6>
       </div>
