--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -121,3 +121,15 @@ linear-gradient(
   width: 50px;
   height: 50px;
 }
+
+.carousel-alt-caption {
+  position: absolute;
+  right: 0%;
+  bottom: 0px;
+  left: 0%;
+  z-index: 10;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  text-align: center;
+}
