--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,6 +4,7 @@
   {%- include head.html -%}
 
   <body class="pb-0 pt-0">
+    {% include website-in-construction.html %}
     {% include nav_compact.html %}
     {{ content }}
     {%- include footer.html -%}
