--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
   <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
   <script src="{{"/assets/javascript/main.js" | relative_url }}"></script>
+  <script src="{{"/assets/javascript/magnifying-glass.js" | relative_url }}"></script>
   <script src="{{"/assets/javascript/jarallax-0.2.4b.min.js" | relative_url }}"></script>
 </head>
