--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,6 +7,7 @@
     {% include website-in-construction.html %}
     {% include nav_compact.html %}
     {{ content }}
+    {%- include other-projects.html -%}
     {%- include footer.html -%}
   </body>
 
