--- a/_includes/project_list_semi_compact.html
+++ b/_includes/project_list_semi_compact.html
@@ -6,19 +6,21 @@
     {% if project.featured %}
     {% assign index = index | plus: 1 %}
     <div class="card col-lg-3 col-md-4 col-sm-6 p-0 text-left d-flex flex-column">
-        <div class="card-img-top card-thumbnail">
-        <img class="card-img-top fill-image" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
-        </div>
-        <div class="card-body d-flex flex-column">
-        <h5 class="card-title text-dark">{{ project.title }}</h5>
-        <p class="card-text text-dark">{{ project.very-short-description }}</p>
-            {% assign badges-size = project.badges | size %}
-            {% unless badges-size == 0 %}
-            <div class="p-0 m-0 mt-auto" >
-                {% include badges.html badges=project.badges %}
+        <a class="clickable-card link-unstyled bg-light" href="{{project.dedicated-page}}">
+            <div class="card-img-top card-thumbnail">
+            <img class="card-img-top fill-image" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
             </div>
-            {% endunless %}
-        </div>
+            <div class="card-body d-flex flex-column">
+            <h5 class="card-title text-dark">{{ project.title }}</h5>
+            <p class="card-text text-dark">{{ project.short-description }}</p>
+                {% assign badges-size = project.badges | size %}
+                {% unless badges-size == 0 %}
+                <div class="p-0 m-0 mt-auto" >
+                    {% include badges.html badges=project.badges %}
+                </div>
+                {% endunless %}
+            </div>
+        </a>
     </div>
     {% assign remainder3 = index | modulo: 3 %}
     {% assign remainder4 = index | modulo: 4 %}
