--- a/_includes/featured-carousel.html
+++ b/_includes/featured-carousel.html
@@ -33,8 +33,8 @@
      </video>
       <div class="carousel-caption rounded bg-light p-3 text-left">         
         <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">{{ project.title }}</h1>
-          <div class="p-2 align-self-end text-right" >
+          <h1 class="p-2 col-12 col-md-3">{{ project.title }}</h1>
+          <div class="p-2 align-self-end text-md-right ml-md-auto" >
             {% include badges.html badges=project.badges %}
           </div>
         </div>
@@ -51,27 +51,6 @@
     </div>
     {% endif %}
     {% endfor %}
-    <!--
-    <div class="carousel-item">
-      <img class="third-slide carousel-item-background" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
-      <div class="carousel-caption rounded bg-light p-3 text-left">         
-        <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">Personal Projects <span class="text-muted">& Game Jams</span></h1>
-          <div class="p-2 align-self-end text-right" >
-            <span class="badge badge-primary">Game Designer</span>
-            <span class="badge badge-secondary">Level Designer</span>
-            <br />
-            <span class="badge badge-info">Gameplay Programmer</span>
-          </div>
-        </div>
-        <div class="row d-flex px-2">
-          <p class="text-dark col-12 col-md-8 col-lg-8">
-            I have made many other game projects, which allowed me to develop various skills over the years.
-          </p>
-        </div>
-        <p><a class="btn btn-lg btn-primary" href="https://oramy.itch.io" role="button">All Projects</a></p>
-      </div>
-    </div>-->
   </div>
   <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon carousel-control-big-icon" aria-hidden="true"></span>
