--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -1,10 +1,10 @@
-<div class="card-deck">
+<div class="card-deck justify-content-center">
 {% assign index = 0 %}
 {% for project_hash in include.projects %}
 {% assign project = project_hash[1] %}
 {% unless project.hidden %}
 {% assign index = index | plus: 1 %}
-<div class="card p-0 text-left">
+<div class="card p-0 text-left col-lg-3 col-md-4 col-sm-6 col-12">
     <a class="clickable-card link-unstyled bg-light" href="{{project.dedicated-page}}">
         <div class="card-content">
             <div class="card-mouse-anim">
