--- a/_includes/project-info.html
+++ b/_includes/project-info.html
@@ -12,7 +12,7 @@
             </ul>
             {% include badges.html badges=project.badges %}
             <hr>
-            <a class="btn btn-primary btn-sm" href="#" role="button">Download on itch.io</a>
+            <a class="btn btn-primary btn-sm" href="{{project.download-page}}" role="button">{{project.download-button}}</a>
         </div>
         <div class="col-12 d-lg-none p-3">
             <h2>Infos</h2>
