Added resume final version, updated links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
           <ul class="list-unstyled">
             <a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><li class="bi bi-linkedin"><span class="nav-other-websites-desc"> LinkedIn</span></li></a>
             <a class="badge badge-light" href="https://oramy.itch.io"><li><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></li></a>
-            <a class="badge badge-light" href="https://oramy.github.io/resume.pdf"><li class="bi bi-file-person"><span class="nav-other-websites-desc"> Resume</span></li></a>
+            <a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><li class="bi bi-file-person"><span class="nav-other-websites-desc"> Resume</span></li></a>
           </ul>
         </div> 
       <p class="text-center text-muted">Amaury Butaux</p>
