--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <footer class="pt-3 mt-4 my-auto">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="/project_library" class="nav-link px-2 text-muted">Project Library</a></li>
+        <!--<li class="nav-item"><a href="/project_library" class="nav-link px-2 text-muted">Project Library</a></li>-->
       </ul>
         <div class="nav justify-content-center">
           <ul class="list-unstyled">
