--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {%- include head.html -%}
 
   <body class="pb-0">
-    {% include website-in-construction.html %}
+    <!--{% include website-in-construction.html %}-->
     {{ content }}
     {%- include footer.html -%}
   </body>
