--- a/_includes/featured-carousel.html
+++ b/_includes/featured-carousel.html
@@ -42,9 +42,14 @@
           <p class="text-dark col-12 col-md-10 col-lg-8">{{ project.description }}</p>
         </div>
         <div class="d-flex px-2">
-          <a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Learn more</a>
-          <div class="ml-auto d-flex flex-column justify-content-center">
+          <div class="d-flex align-items-end">
+            <a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Learn more</a>
+          </div>
+          <div class="ml-auto d-flex flex-column flex-md-row align-items-end">
             <img class="structure-logo mx-3" src="{{ project.structure-logo | relative_url }}" />
+            {% if project.title == "Fired Up!" %}
+            <img class="structure-logo mx-3" src="{{ project.award-logo | relative_url }}" />
+            {% endif %}
           </div>
         </div>
       </div>
