updated spike project

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -23,7 +23,7 @@
           <h2>Collaborative Design</h2>
           <p class="lead">Making games is about teamwork.</p>
           <p>
-            I care about others and their challenges.<br>
+            I always think about others' constraints in my design.<br>
             I ensure a common vision through<br>
             clear and synthetic documents and presentations.<br>
           </p>
