--- a/_includes/thumbnail-carousel.html
+++ b/_includes/thumbnail-carousel.html
@@ -12,7 +12,12 @@
         {% endif %}
 
         {% if splits.first contains "image" %}
-            <img class="d-block w-100" src="{{splits.last}}" alt="Hills">
+            {% assign imageFile=splits.last | split: "."%}
+            <picture>
+                <source type="image/webp" srcset="{{imageFile[0]}}.webp">
+                <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
+                <img class="d-block w-100" src="{{splits.last}}" alt="Hills">
+            </picture>
         {% endif %}
         {% if splits.first contains "video" %}
             <div class="embed-responsive embed-responsive-16by9">
@@ -31,7 +36,12 @@
     {% for image in include.thumbnail-images %}
     <li class="list-item active px-2">
         <button class="thumbnail-carousel-btn btn btn-default p-0" data-slide-to="{{index}}" data-target="#{{include.carousel-id}}">
-            <img src="{{image}}" class="img-fluid rounded">
+            {% assign imageFile= image | split: "."%}
+            <picture>
+                <source type="image/webp" srcset="{{imageFile[0]}}.webp">
+                <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
+                <img class="img-fluid rounded" src="{{image}}">
+            </picture>
         </button>
     </li>
     {% assign index = index | plus: 1 %}
