--- a/_includes/thumbnail-carousel.html
+++ b/_includes/thumbnail-carousel.html
@@ -12,16 +12,16 @@
         {% endif %}
 
         {% if splits.first contains "image" %}
-            {% assign imageFile=splits.last | split: "."%}
+            {% assign imageFile=splits[1] | split: "."%}
             <picture>
                 <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                 <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                <img class="d-block w-100" src="{{splits.last}}" alt="Hills">
+                <img class="d-block w-100" src="{{splits[1]}}" alt="{{splits[2]}}">
             </picture>
         {% endif %}
         {% if splits.first contains "video" %}
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100" src="{{splits.last}}" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item w-100" src="{{splits[1]}}" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
         {% endif %}
         </div>
@@ -34,13 +34,14 @@
 <ol class="d-flex flex-row w-100 list-unstyled" id="{{indicators-id}}">
     {% assign index = 0 %}
     {% for image in include.thumbnail-images %}
+    {% assign splits=image|split:";"%}
     <li class="list-item active px-2">
         <button class="thumbnail-carousel-btn btn btn-default p-0" data-slide-to="{{index}}" data-target="#{{include.carousel-id}}">
-            {% assign imageFile= image | split: "."%}
+            {% assign imageFile=splits.first | split: "."%}
             <picture>
                 <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                 <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                <img class="img-fluid rounded" src="{{image}}">
+                <img class="img-fluid rounded" src="{{splits.first}}" alt="{{splits.last}}">
             </picture>
         </button>
     </li>
