--- a/_includes/project-info.html
+++ b/_includes/project-info.html
@@ -13,9 +13,9 @@
             {% include badges.html badges=project.badges %}
             <hr>
           <div class="d-flex flex-column justify-content-center">
-            <img class="structure-logo align-self-center mx-3" src="{{ project.structure-logo | relative_url }}" />
+            <img class="structure-logo align-self-center mx-3" src="{{ project.structure-logo | relative_url }}" alt="{{project.structure-logo-alt }}" />
             {% if project.title == "Fired Up!" %}
-            <img class="structure-logo align-self-center mx-3" src="{{ project.award-logo | relative_url }}" />
+            <img class="structure-logo align-self-center mx-3" src="{{ project.award-logo | relative_url }}" alt="{project.award-logo-alt}" />
             {% endif %}
           </div>
             <hr>
