--- a/_includes/project-info.html
+++ b/_includes/project-info.html
@@ -34,9 +34,9 @@
             <hr>
           <div class="d-flex flex-row justify-content-center">
              <div>
-               <img class="structure-logo mx-3" src="{{ project.structure-logo | relative_url }}" />
+               <img class="structure-logo mx-3" src="{{ project.structure-logo | relative_url }}" alt="{{project.structure-logo-alt }}"/>
                {% if project.title == "Fired Up!" %}
-               <img class="structure-logo mx-3" src="{{ project.award-logo | relative_url }}" />
+               <img class="structure-logo mx-3" src="{{ project.award-logo | relative_url }}" alt="{{project.award-logo-alt }}"/>
                {% endif %}
              </div>
           </div>
