--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
       </ul>
         <div class="nav justify-content-center">
           <ul class="list-unstyled">
-            <a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><li class="bi bi-linkedin"><span class="nav-other-websites-desc"> LinkedIn</span></li></a>
-            <a class="badge badge-light" href="https://oramy.itch.io"><li><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></li></a>
-            <a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><li class="bi bi-file-person"><span class="nav-other-websites-desc"> Resume</span></li></a>
+            <li><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
+            <li><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
+            <li><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
           </ul>
         </div> 
       <p class="text-center text-muted">Amaury Butaux</p>
