--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,9 @@
       <img class="rounded-circle col-md-4 col-6" alt="Profile picture" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
       <div class="col-md-8 col-6 d-flex">
         <ul class="list-unstyled align-self-end flex-column col-12 row">
-          <div class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><li class="bi bi-linkedin"><span class="nav-other-websites-desc"> LinkedIn</span></li></a></div>
-          <div class="col-12"><a class="badge badge-light" href="https://oramy.itch.io"><li><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></li></a></div>
-          <div class="col-12"><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><li class="bi bi-file-person"><span class="nav-other-websites-desc"> Resume</span></li></a></div>
+          <li class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
+          <li class="col-12"><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
+          <li class="col-12"><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
         </ul>
       </div> 
     </div>
