added title to iframes

--- a/_includes/thumbnail-carousel.html
+++ b/_includes/thumbnail-carousel.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% if splits.first contains "video" %}
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item w-100" src="{{splits[1]}}" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item w-100" src="{{splits[1]}}" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="splits[2]" allowfullscreen></iframe>
             </div>
         {% endif %}
         </div>
