changed colors to have a better constrast

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,15 +42,15 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #FF7851 !default;
+$red:     #D12F00 !default;
 $orange:  #fd7e14 !default;
-$yellow:  #FFCE67 !default;
-$green:   #56CC9D !default;
+$yellow:  #946200 !default;
+$green:   #277C55 !default;
 $teal:    #20c997 !default;
-$cyan:    #6CC3D5 !default;
+$cyan:    #28768B !default;
 
-$primary:       #78C2AD;
-$secondary:     #F3969A;
+$primary:       #367867;
+$secondary:     #D61F24;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
