improved color contrasts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
   <div class="container">
     <footer class="pt-3 mt-4 my-auto">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-light">Home</a></li>
         <!--<li class="nav-item"><a href="/project_library" class="nav-link px-2 text-muted">Project Library</a></li>-->
       </ul>
         <div class="nav justify-content-center">
           <ul class="list-unstyled">
-            <li><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
-            <li><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
-            <li><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
+            <li class="d-inline"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
+            <li class="d-inline"><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
+            <li class="d-inline"><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
           </ul>
         </div> 
-      <p class="text-center text-muted">Amaury Butaux</p>
+      <p class="text-center text-light">Amaury Butaux</p>
     </footer>
   </div>
 </div>
