--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,18 @@
-<div class="px-3 pt-5 my-0 pb-0 text-left">
+<div class="d-none d-md-block pt-5"></div>
+<div class="d-block d-md-none pt-2"></div>
+<div class="px-3 pt-0 my-0 pb-0 text-left">
   <div class="col-md-8 col-lg-6 mx-auto">
     <div class="row">
+      <div class="col-12 d-flex">
+        <ul class="list-unstyled d-flex d-md-none align-self-end col-12 row">
+          <li class="col"><a class="py-3 d-inline-block" href="https://linkedin.com/in/amaury-butaux"><span class="badge badge-light nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
+          <li class="col"><a class="py-3 d-inline-block" href="https://oramy.itch.io"><span class="badge badge-light"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span>̣</span></a></li>
+          <li class="col"><a class="py-3 d-inline-block" href="{{"/resume.pdf" | relative-url}}"><span class="badge badge-light nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
+        </ul>
+      </div> 
       <img class="rounded-circle col-md-4 col-6" alt="Profile picture" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
-      <div class="col-md-8 col-6 d-flex">
-        <ul class="list-unstyled align-self-end flex-column col-12 row">
+      <div class="col-md-8 d-flex">
+        <ul class="list-unstyled d-none d-md-block align-self-end flex-column col-12 row">
           <li class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
           <li class="col-12"><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
           <li class="col-12"><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
