--- a/_includes/nav_compact.html
+++ b/_includes/nav_compact.html
@@ -29,10 +29,10 @@
         </a>
       </div>
       <div class="col-9 d-flex row">
-        <ul class="list-unstyled align-self-end flex-column col-12 row">
-          <li class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><span class="nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
-          <li class="col-12"><a class="badge badge-light" href="https://oramy.itch.io"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></a></li>
-          <li class="col-12"><a class="badge badge-light" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
+        <ul class="list-unstyled align-self-end col-12 row">
+          <li class="col-4"><a class="py-3 d-inline-block" href="https://linkedin.com/in/amaury-butaux"><span class="badge badge-light nav-other-websites-desc bi bi-linkedin"> LinkedIn</span></a></li>
+          <li class="col-4"><a class="py-3 d-inline-block" href="https://oramy.itch.io"><span class="badge badge-light"><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" alt="itch.io icon" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span>̣</span></a></li>
+          <li class="col-4"><a class="py-3 d-inline-block" href="{{"/resume.pdf" | relative-url}}"><span class="badge badge-light nav-other-websites-desc bi bi-file-person"> Resume</span></a></li>
         </ul>
       </div> 
       <div class="col-12 d-flex row">
