--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 
   {%- include head.html -%}
 
-  <body class="pb-0">
+  <body class="pb-0 pt-0">
+    <div class="d-none d-md-block pb-0 pt-5"></div>
     <!--{% include website-in-construction.html %}-->
     {{ content }}
     {%- include footer.html -%}
