--- a/_includes/featured-carousel.html
+++ b/_includes/featured-carousel.html
@@ -43,7 +43,7 @@
         </div>
         <div class="d-flex px-2">
           <div class="d-flex align-items-end">
-            <a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Learn more</a>
+            <a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Project page</a>
           </div>
           <div class="ml-auto d-flex flex-column flex-md-row align-items-end">
             <img class="structure-logo mx-3" src="{{ project.structure-logo | relative_url }}" alt="{{project.structure-logo-alt}}" />
