fixed headings hierarchy

--- a/_includes/nav_compact.html
+++ b/_includes/nav_compact.html
@@ -9,8 +9,8 @@
       </div>
       <div class="col-md-8 col-6">
         <a href="/" class="btn btn-outline-light d-flex"><h1 class="fw-bold">Amaury Butaux</h1></a>
-        <h3 class="col-12 fw-bold">Junior Game Designer</h3>
-        <h6 class="col-12 fw-bold">Looking for a 6 months internship</h6>
+        <h2 class="col-12 fw-bold">Junior Game Designer</h2>
+        <span class="col-12 fw-bold fs-6">Looking for a 6 months internship</span>
       </div>
       <div class="col-md-2 col-3 d-flex row">
         <ul class="list-unstyled align-self-end flex-column col-12 row">
@@ -37,8 +37,8 @@
       </div> 
       <div class="col-12">
         <a href="/" class="btn btn-outline-light d-flex"><h1 class="fw-bold">Amaury Butaux</h1></a>
-        <h3 class="col-12 fw-bold">Junior Game Designer</h3>
-        <h6 class="col-12 fw-bold">Looking for a 6 months internship</h6>
+        <h2 class="col-12 fw-bold">Junior Game Designer</h2>
+        <span class="col-12 fw-bold fs-6">Looking for a 6 months internship</span>
       </div>
     </div>
   </div>
