--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -10,14 +10,14 @@
         <div class="card-content">
             <div class="card-mouse-anim">
             <div class="face-back bg-light preserve-3D">
-                <div class="card-img-top card-thumbnail">
+                <div class="card-img-top card-thumbnail h-50 p-0">
                     {% assign imageFile = project.thumbnail | split: "."%}
                     <picture>
                         {% unless image contains "gif" %}
                             <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                         {% endunless %}
                         <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                        <img class="card-img-top fill-image" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
+                        <img class="card-img-top fill-image h-100" width="16" height="9" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
                     </picture>
                 </div>
                 <div class="card-body preserve-3D">
@@ -37,7 +37,7 @@
                                 <source type="image/webp" srcset="{{imageFile[0]}}.webp">
                             {% endunless %}
                             <source type="image/{{imageFile[1]}}" srcset="{{imageFile[0]}}.{{imageFile[1]}}">
-                            <img class="card-img card-img-back" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
+                            <img class="card-img card-img-back" width="649" height="365" src="{{ project.big-thumbnail | relative_url }}" alt="{{ project.title }}">
                         </picture>
                     </div>
                     <div class="card-back-text d-flex">
