--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,6 @@
 ---
 layout: default
 ---
-<article>
 
-  <header>
-    <h1>{{ page.title | escape }}</h1>
-  </header>
-
-  <section>
-    {{ content }}
-  </section>
-
-</article>
+{% include nav_compact.html %}
+{{ content }}
